Web Inspector: Dark Mode: Increase the contrast in the search bar tab for @media (prefers-contrast: more) and @media (prefers-color-scheme: dark) https://bugs.webkit.org/show_bug.cgi?id=271930
Reviewed by NOBODY (OOPS!).

Invert filter on the new rule and whiten the search in SearchSidebarPanel.css.
Increase darkness of background and lightness of text in search changed banner in SearchSidebarPanel.css.
Increase the lightness of the borders in search changed banner in SearchSidebarPanel.css.

* Source/WebInspectorUI/UserInterface/Views/SearchSidebarPanel.css:
(@media (prefers-color-scheme: dark) .sidebar > .panel.details.css-style > .content ~ .options-container > .new-rule):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .sidebar > .panel.navigation.search > .search-bar > input[type="search"]):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .sidebar > .panel.navigation.search.changed > .banner):

--- a/Source/WebInspectorUI/UserInterface/Views/SearchSidebarPanel.css
+++ b/Source/WebInspectorUI/UserInterface/Views/SearchSidebarPanel.css
@@ -76,3 +76,22 @@ body[dir=rtl] .sidebar > .panel.navigation.search .item.source-code-match {
 .sidebar > .panel.navigation.search.changed > :is(.content, .message-text-view) {
     top: calc(var(--navigation-bar-height) + 40px - 1px);
 }
+
+@media (prefers-color-scheme: dark) {
+    .sidebar > .panel.details.css-style > .content ~ .options-container > .new-rule {
+        filter: var(--filter-invert);
+    }
+
+    @media (prefers-contrast: more) {
+        .sidebar > .panel.navigation.search > .search-bar > input[type="search"] {
+            color: hsl(0, 0%, 85%);
+        }
+
+        .sidebar > .panel.navigation.search.changed > .banner {
+            color: hsl(50, 100%, 95%);
+            background-color:  hsl(13, 20%, 15%);
+            border-top: 1px solid hsl(0, 0%, 70%, 0.8);
+            border-bottom: 1px solid hsl(0, 0%, 70%, 0.8);
+        }
+    }
+}
